installed tailwind and added gitignore

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Helper</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="./dist/styles.css" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <div>To-Do List</div>
+    </nav>
     <input type="text" id="input-field">
-    <button id="add-button">Add to cart</button>\
+    <button id="add-button">Add to cart</button>
     <script src="index.js"></script>
 </body>
 </html>
